style.css
/* ... */
#click_rechercher {
    padding: 4%;
    border: 1px solid #0065FC;
    border-left: transparent;
    border-bottom-right-radius: 10px;
    border-top-right-radius: 10px;
    color: white;
    background-color: #0065FC;
}


/*Filtres*/
.filtres_recherche{
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 2%;
}

.filtres_recherche h4{
    align-self: center;
}
.filtres {
    display: flex;
    flex-wrap: wrap;
    flex:77%;    
}
        
.filtre { 
    list-style-type: none;
    border: 2px solid #F2F2F2;
    border-radius: 20px;
    text-align: right;
    padding-right: 2%;
    margin-right: 2%;
    font-size: 16px;
    font-weight: bold;
}
.filtre i{
    background-color: #DEEBFF;
    color: #0065FC;
    padding: 10px;
    margin-right: 5px;
    border-radius: 100px;
    box-shadow: 1px 1px 1px #DEEBFF;
}
.filtre:hover{
    border-color: #DEEBFF;
}
.filtres li:hover{
    background-color: #DEEBFF;
    color: #0065FC;
    box-shadow: 1px 3px 2px #555;
}

.info_recherche i{
    margin-right: 1%;
    padding-top: 0.4%;
    padding-bottom: 0.4%;
    padding-right: 0.8%;
    padding-left: 0.8%;
    border: 1px solid #F2F2F2;
    color: #0065FC;
    border-radius: 100px;
}

.info_recherche h6{
    font-size: 14px;
    font-weight: normal;
    margin-top: 0%;
}

/********************************* SECTIONS Hébergements + Activités */


/* SECTION HEBERGEMENTS + Paramètres grilles en Flexbox */ 

#hebergements{
    display: flex;
    justify-content: space-between;
}


.hm_box{
    display: flex;
    flex-direction: column;
    flex: 65%;
    background-color: #F2F2F2;
    border-radius: 20px;
    padding: 2% 3% 2% 3%;
}
.hm_box a{
    text-decoration: none;
    color: black;
    flex: 30%;
}
.grille_hebergements{
    display: flex;
    flex-wrap: wrap;
    margin-left: 0%;
    margin-right: 0%;
}

.grille_hebergements:first-child i{
color: #F2F2F2;
}


.grille_item{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    border-radius: 25px;
    margin: 10px;
    flex:30%;
    background-color: white;
    box-shadow: 1px 1px 12px #555;
}

.grille_item img{
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    object-fit: cover; /*pour garder le ratio*/
    height: 100px;
    width: 96%;
    margin: 2%;
}
.pic_item{
    width: 100%;
    align-self: center;
}

.infos_item{
    display: flex;
    padding-left: 15px;
    flex-direction: column;
}
.titre_item{
    margin-top: 10px;
    margin-bottom: 2px;
    font-weight: bolder;
    font-size: 14px;
}
.prix_nuit{
    margin-top: 2px;
    margin-bottom: 0px;
    font-size: 12px;
    font-weight: lighter;
}
.stars-five{
    margin-bottom: 10px;
}
.stars-four{
    margin-bottom: 10px;
}
.stars-three{
    margin-bottom: 10px;
}

.stars-five i{
    color: #0065FC;
    font-size: 10px;
}

.stars-four i{
    color: #0065FC;
    font-size: 10px;
}
.stars-four i:last-child {
    color: #f2f2f2;
    font-size: 10px;
}

.stars-three i{
    color: #0065FC;
    font-size: 10px;
}
.stars-three i:nth-child(n+4){
    color: #f2f2f2;
    font-size: 10px;
}
#button_more{
    align-self: flex-start;
    border: none;
    padding: 2%;
    margin-top: 2%;
    background-color: transparent;
    font-weight: bold;
    font-size: 14px;
}

/* LES PLUS POPULAIRES*/

.pop_box{
    display: flex;
    flex-direction: column;
    margin-left: 3%;
    flex: 27%;
    background-color: #F2F2F2;
    border-radius: 20px;
    padding: 2% 3% 2% 3%;
}
.grille_hebergements_pop{
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: space-around;
}

.pop_box a{
    text-decoration: none;
    color: black;
    width: 100%;
    flex: 90% ;
    align-self: center;
    margin-top: 1%;
}

.titre_section_avec_icone{
    display: flex;
    justify-content: space-between;
    margin-bottom: 3%;
}

#icone_pop{
    align-self: center;
}
.grille_item_pop{
    display: flex;
    flex-direction: row;
    border-radius: 25px;
    padding-bottom: 2px;
    background-color: white;
    box-shadow: 1px 1px 12px #555;
}

.pic_item_pop{
    width: 40%;
    height: 128px;
    margin-right: 2%;
}

.grille_item_pop img{
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    object-fit: cover; /*pour garder le ratio*/
    width: 100%;
    height: 120px;
    align-self: center;
    margin: 5px;
}

.infos_item_pop{
    margin-top: 5px;
    margin-bottom: 5px;
    width: 70%;
    display: flex;
    padding-left: 2%;
    flex-direction: column;
    justify-content: space-between;
}
.infos_item_pop_text{
    display: flex;
    flex-direction: column;
    width: 70%;
}
.infos_item_pop h6{
    margin-top: 3%;
}

.stars_pop{
    justify-self: flex-end ;
    margin-bottom: 10px;
}
.stars_pop i{
    color: #0065FC;
    font-size: 10px;
}

/* CHANGEMENT DE SECTION */
/*ACTIVITES*/

#activites{
    width: 100%;
}

.activites_box{
    background-color: white;
    display: flex;
    flex-direction: column;
    padding: 2%;
}
.grille_activites{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    width: 100%;
}
.grille_activites a{
    text-decoration: none;
    color: black;
}
.item_act{
    display: flex;
    flex-direction: column;
    background-color: white;
    border-radius: 25px;
    box-shadow: 1px 1px 12px #555;
    margin-bottom: 10%;
}

.item_act img{
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    object-fit: cover; /*pour garder le ratio*/
    width: 260px;
    height: 100px;
} 

.item_act h4{
    padding: 14px;
    margin-top: 0px;
    font-size: 13px;
    font-weight: bold;
}

.item_grid:first-child{
    margin-left: 0px;
}
.item_grid{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    align-content: space-between; 
    flex-wrap: wrap;
}

#Vieux_port img{
    height: 320px;
}

#Fort_de_Pomègues img{
    height: 130px;
}

#Îles_du_Frioul img{
    height: 105px;
    object-position: top;
}
/* ... */

